# AudioFlow3

./: .gitignore  AGENTS.md  AudioFlow3.qrc  CMakeLists.txt  Info.plist  README.md  build.sh  collapsibleblock.cpp  collapsibleblock.h  icon.icns  knobwidget.cpp  knobwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toggleswitch.cpp  toggleswitch.h
.github/workflows/: build.yml
src/: audioflow.cpp  audioflow.h  dockreopen.mm  permission.mm  permission_request.h  processing.cpp  processing.h
src/fileutils/: config.cpp  config.h  globals.cpp  globals.h  readIRFile.cpp  readIRFile.h
src/processing/: amplifier.cpp  amplifier.h  convolutionReverb.cpp  convolutionReverb.h  equalizer.cpp  equalizer.h  iirFilter.cpp  iirFilter.h
